--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@steerprotocol/strategy-utils": "^0.0.6",
     "as-bind": "^0.8.0",
     "assemblyscript-json": "^1.1.0",
+    "axios": "^0.27.2",
     "commitizen": "^4.2.4",
     "conventional-changelog-conventionalcommits": "^4.6.0",
     "typescript": "^4.3.5"
