--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@steerprotocol/strategy-utils": "^0.0.6",
     "as-bind": "^0.8.0",
     "assemblyscript-json": "^1.1.0",
-    "axios": "^0.27.2",
     "commitizen": "^4.2.4",
     "conventional-changelog-conventionalcommits": "^4.6.0",
     "typescript": "^4.3.5"
@@ -35,7 +34,7 @@
     "@babel/preset-env": "^7.14.8",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.11.11",
-    "assemblyscript": "0.19.9",
+    "assemblyscript": "^0.20.7",
     "babel-core": "^6.26.3",
     "babel-jest": "^27.0.6",
     "cz-conventional-changelog": "3.3.0",
