--- a/package.json
+++ b/package.json
@@ -1,48 +1,59 @@
 {
-  "name": "@steerprotocol/strategy-template-assemblyscript",
+  "name": "@steerprotocol/data-connector-template-assemblyscript",
   "version": "0.0.1",
   "description": "AssemblyScript based strategy template for the Steer Protocol",
-  "main": "index.js",
   "scripts": {
     "test": "yarn jest",
-    "asbuild:untouched": "asc assembly/index.ts --target debug --exportRuntime --transform as-bind",
-    "asbuild:optimized": "asc assembly/index.ts --target release --exportRuntime --transform as-bind",
-    "asbuild:big": "asc assembly/index.ts --target debug --exportRuntime --transform as-bind --initialMemory 8192",
-    "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
+    "asbuild:debug": "asc assembly/index.ts --target debug",
+    "asbuild:release": "asc assembly/index.ts --target release",
+    "asbuild": "npm run asbuild:debug && npm run asbuild:release",
+    "start": "npx serve .",
     "docs": "typedoc --tsconfig ./tsconfig.json",
     "strategy": "yarn asbuild && yarn test",
     "semantic-release": "semantic-release",
     "commit": "cz",
-    "postinstall": "yarn asbuild"
+    "patch-package": "patch-package",
+    "postinstall": "yarn patch-package && yarn asbuild"
   },
   "author": "Derek Barrera <derekbarrera@gmail.com>",
-  "license": "ISC",
+  "contributors": [
+    "Jairus Tanaka <jairus.v.tanaka@outlook.com>"
+  ],
+  "license": "GNU",
   "dependencies": {
-    "@assemblyscript/loader": "0.19.9",
     "@babel/preset-typescript": "^7.14.5",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@steerprotocol/base-strategy": "^0.0.2",
-    "@steerprotocol/concentrated-liquidity-strategy": "0.0.10",
-    "@steerprotocol/strategy-utils": "^0.0.6",
-    "as-bind": "^0.8.0",
-    "assemblyscript-json": "^1.1.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@steerprotocol/app-loader": "^0.2.0",
+    "@steerprotocol/base-strategy": "^0.1.0",
+    "@steerprotocol/concentrated-liquidity-strategy": "^0.2.9",
+    "@steerprotocol/data-connector-loader": "^0.1.0",
+    "@steerprotocol/strategy-utils": "^2.2.1",
+    "as-bignum": "^0.2.23",
+    "as-fetch": "^2.1.4",
+    "assemblyscript-regex": "^1.6.4",
+    "assemblyscript-temporal": "^2.2.3",
+    "asyncify-shim": "^0.1.0",
     "commitizen": "^4.2.4",
-    "conventional-changelog-conventionalcommits": "^4.6.0",
-    "typescript": "^4.3.5"
+    "conventional-changelog-conventionalcommits": "^6.1.0",
+    "graph-packet-parser": "^0.2.0",
+    "json-as": "^0.5.54",
+    "patch-package": "^8.0.0",
+    "typescript": "^5.1.6",
+    "visitor-as": "^0.11.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.8",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.11.11",
-    "assemblyscript": "^0.19.9",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.9",
+    "assemblyscript": "^0.27.8",
     "babel-core": "^6.26.3",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^29.6.2",
     "cz-conventional-changelog": "3.3.0",
-    "jest": "^27.0.6",
-    "regenerator-runtime": "^0.13.9",
-    "semantic-release": "^17.4.5",
-    "typedoc": "^0.21.5"
+    "jest": "^29.6.2",
+    "regenerator-runtime": "^0.14.0",
+    "semantic-release": "^21.0.7",
+    "typedoc": "^0.24.8"
   },
   "publishConfig": {
     "access": "restricted"
