--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "extends": "assemblyscript/std/assembly.json",
   "include": [
-    "./assembly/**/*.ts"
+    "assembly/**/*.ts"
   ],
+  "compilerOptions": {
+    "experimentalDecorators": true
+  },
   "typedocOptions": {
-    "entryPoints": ["assembly/index.ts"],
+    "entryPoints": [
+      "assembly/index.ts"
+    ],
     "out": "docs",
     "excludeExternals": true
   }
