bug: asyncify freezes build

--- a/asconfig.json
+++ b/asconfig.json
@@ -19,8 +19,7 @@
   "options": {
     "bindings": "esm",
     "transform": [
-      "json-as/transform",
-      "asyncify-shim"
+      "json-as/transform"
     ]
   }
 }
