--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AssemblyScript based strategy template for the Steer Protocol",
   "scripts": {
     "test": "yarn jest",
-    "build:debug": "asc assembly/index.ts --target debug",
+    "build:debug": "asc assembly/index.ts --target debug --runPasses asyncify  --exportRuntime",
     "build:release": "asc assembly/index.ts --target release",
     "docs": "typedoc --tsconfig ./tsconfig.json",
     "strategy": "yarn build:debug && yarn test",
@@ -24,9 +24,9 @@
     "@semantic-release/git": "^10.0.1",
     "@steerprotocol/app-loader": "^0.2.0",
     "@steerprotocol/base-strategy": "^0.1.0",
-    "@steerprotocol/concentrated-liquidity-strategy": "^0.2.9",
+    "@steerprotocol/concentrated-liquidity-strategy": "^1.0.0",
     "@steerprotocol/data-connector-loader": "^0.1.2",
-    "@steerprotocol/strategy-utils": "^2.2.1",
+    "@steerprotocol/strategy-utils": "^3.0.0",
     "as-bignum": "^0.2.23",
     "as-fetch": "^2.1.4",
     "assemblyscript-regex": "^1.6.4",
@@ -35,7 +35,7 @@
     "commitizen": "^4.2.4",
     "conventional-changelog-conventionalcommits": "^6.1.0",
     "graph-packet-parser": "^0.2.0",
-    "json-as": "^0.5.59",
+    "json-as": "^0.5.61",
     "patch-package": "^8.0.0",
     "typescript": "^5.1.6",
     "visitor-as": "^0.11.4"
