feat: RLP import

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AssemblyScript based strategy template for the Steer Protocol",
   "scripts": {
     "test": "yarn jest",
-    "build:debug": "asc assembly/index.ts --target debug --runPasses asyncify --runtime stub --exportRuntime",
+    "build:debug": "asc assembly/index.ts --target debug --runPasses asyncify --exportRuntime --runtime incremental",
     "build:release": "asc assembly/index.ts --target release",
     "docs": "typedoc --tsconfig ./tsconfig.json",
     "strategy": "yarn build:debug && yarn test",
@@ -19,39 +19,39 @@
   ],
   "license": "GNU",
   "dependencies": {
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/preset-typescript": "^7.22.15",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@steerprotocol/app-loader": "^0.2.0",
+    "@steerprotocol/app-loader": "^0.2.3",
     "@steerprotocol/base-strategy": "^0.1.0",
-    "@steerprotocol/concentrated-liquidity-strategy": "^1.0.0",
-    "@steerprotocol/data-connector-loader": "^0.1.2",
-    "@steerprotocol/strategy-utils": "^3.0.0",
+    "@steerprotocol/concentrated-liquidity-strategy": "^1.0.3",
+    "@steerprotocol/data-connector-loader": "^0.1.3",
+    "@steerprotocol/strategy-utils": "^3.1.1",
     "as-bignum": "^0.2.23",
     "as-fetch": "^2.1.4",
     "assemblyscript-regex": "^1.6.4",
     "assemblyscript-temporal": "^2.2.3",
     "asyncify-shim": "^0.1.0",
     "commitizen": "^4.2.4",
-    "conventional-changelog-conventionalcommits": "^6.1.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "graph-packet-parser": "^0.2.3",
     "json-as": "^0.5.61",
     "patch-package": "^8.0.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "visitor-as": "^0.11.4"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.14.8",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.5.0",
+    "@babel/preset-env": "^7.22.15",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.6.0",
     "assemblyscript": "^0.27.9",
     "babel-core": "^6.26.3",
-    "babel-jest": "^29.6.2",
+    "babel-jest": "^29.6.4",
     "cz-conventional-changelog": "3.3.0",
-    "jest": "^29.6.2",
+    "jest": "^29.6.4",
     "regenerator-runtime": "^0.14.0",
-    "semantic-release": "^21.0.7",
-    "typedoc": "^0.24.8"
+    "semantic-release": "^21.1.1",
+    "typedoc": "^0.25.1"
   },
   "publishConfig": {
     "access": "restricted"
