--- a/package.json
+++ b/package.json
@@ -1,57 +1,53 @@
 {
   "name": "@steerprotocol/data-connector-template-assemblyscript",
-  "version": "0.0.1",
-  "description": "AssemblyScript based strategy template for the Steer Protocol",
+  "version": "0.0.2",
+  "description": "AssemblyScript based universal strategy V3 OHLCV for the Steer Protocol",
+  "main": "index.js",
   "scripts": {
     "test": "yarn jest",
     "build:debug": "asc assembly/index.ts --target debug --runPasses asyncify --exportRuntime --runtime stub",
-    "build:release": "asc assembly/index.ts --target release",
+    "build:release": "asc assembly/index.ts --target release --runPasses asyncify --exportRuntime --runtime stub",
     "docs": "typedoc --tsconfig ./tsconfig.json",
     "strategy": "yarn build:debug && yarn test",
     "semantic-release": "semantic-release",
     "commit": "cz",
     "patch-package": "patch-package",
-    "postinstall": "yarn patch-package && yarn build:debug && yarn build:release"
+    "postinstall": "yarn patch-package && yarn build:debug"
   },
   "author": "Derek Barrera <derekbarrera@gmail.com>",
-  "contributors": [
-    "Jairus Tanaka <jairus.v.tanaka@outlook.com>"
-  ],
-  "license": "GNU",
+  "license": "ISC",
   "dependencies": {
-    "@babel/preset-typescript": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@steerprotocol/app-loader": "^0.2.3",
+    "@steerprotocol/app-loader": "1.0.1",
     "@steerprotocol/base-strategy": "^0.1.0",
     "@steerprotocol/concentrated-liquidity-strategy": "^1.0.3",
-    "@steerprotocol/data-connector-loader": "^0.1.3",
+    "@steerprotocol/data-connector-loader": "0.1.5",
     "@steerprotocol/strategy-utils": "^3.1.1",
-    "as-bignum": "^0.2.23",
+    "as-bignum": "^0.3.0",
     "as-fetch": "^2.1.4",
-    "assemblyscript-regex": "^1.6.4",
-    "assemblyscript-temporal": "^2.2.3",
-    "asyncify-shim": "^0.1.0",
+    "as-json": "^1.0.2",
     "commitizen": "^4.2.4",
     "conventional-changelog-conventionalcommits": "^7.0.2",
-    "graph-packet-parser": "^0.2.3",
-    "json-as": "^0.5.61",
+    "json-as": "^0.5.67",
     "patch-package": "^8.0.0",
+    "serve": "^14.2.1",
     "typescript": "^5.2.2",
     "visitor-as": "^0.11.4"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.15",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.6.0",
-    "assemblyscript": "^0.27.9",
+    "@babel/preset-env": "^7.23.3",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "assemblyscript": "^0.27.17",
     "babel-core": "^6.26.3",
-    "babel-jest": "^29.6.4",
+    "babel-jest": "^29.7.0",
     "cz-conventional-changelog": "3.3.0",
-    "jest": "^29.6.4",
+    "jest": "^29.7.0",
     "regenerator-runtime": "^0.14.0",
-    "semantic-release": "^21.1.1",
-    "typedoc": "^0.25.1"
+    "semantic-release": "^22.0.7",
+    "typedoc": "^0.25.3"
   },
   "publishConfig": {
     "access": "restricted"
