--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@steerprotocol/app-loader": "1.0.2",
     "@steerprotocol/base-strategy": "^0.1.0",
     "@steerprotocol/concentrated-liquidity-strategy": "^1.0.4",
-    "@steerprotocol/data-connector-loader": "0.1.5",
+    "@steerprotocol/data-connector-loader": "^0.2.0",
     "@steerprotocol/strategy-utils": "^3.1.1",
     "as-bignum": "^0.3.0",
     "as-fetch": "^2.1.4",
