--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@steerprotocol/data-connector-template-assemblyscript",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "AssemblyScript based universal strategy V3 OHLCV for the Steer Protocol",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,7 @@
     "strategy": "yarn build:debug && yarn test",
     "semantic-release": "semantic-release",
     "commit": "cz",
-    "patch-package": "patch-package",
-    "postinstall": "yarn patch-package && yarn build:debug"
+    "patch-package": "patch-package"
   },
   "author": "Derek Barrera <derekbarrera@gmail.com>",
   "license": "ISC",
@@ -30,7 +29,7 @@
     "as-json": "^1.0.2",
     "commitizen": "^4.2.4",
     "conventional-changelog-conventionalcommits": "^7.0.2",
-    "json-as": "^0.6.4",
+    "json-as": "0.7.2",
     "patch-package": "^8.0.0",
     "serve": "^14.2.1",
     "typescript": "^5.3.2",
